[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.6"
tokio = { version = "1.32.0", features = ["full"] }
thirtyfour = "0.31.0"
clap = { version = "4.4.6", features = ["derive"] }
clap_complete = "4.4.3"
